<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imc_titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/app_titulo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imc_mensagem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/pesoEDT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/peso_kg"
        style="@style/input_style" />

    <EditText
        android:id="@+id/alturaEDT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/input_style"
        android:hint="@string/altura_cm"
        />

    <Button
        android:id="@+id/calcularBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imc_botao_calcular"
        android:layout_marginTop="46dp"
        android:padding="16dp"
        />

</androidx.appcompat.widget.LinearLayoutCompat>