<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/titleTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imc_titulo"
        style="@style/app_titulo"
        tools:visibility="visible"
        android:layout_centerHorizontal="true"

        android:layout_alignTop="@id/calcularBTN"
        />

    <EditText
        android:id="@+id/pesoEDT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/peso_kg"
        style="@style/input_style"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="24dp"

        />

    <EditText
        android:id="@+id/alturaEDT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/input_style"
        android:hint="@string/altura_cm"
        tools:visibility="visible"
        android:layout_below="@+id/pesoEDT"
        android:layout_alignStart="@id/pesoEDT"
        android:layout_alignEnd="@id/pesoEDT"
        />

    <Button
        android:id="@+id/calcularBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="16dp"
        android:text="@string/imc_botao_calcular"
        tools:visibility="visible" />



</RelativeLayout>