<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity=""
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        style="@style/title_purple" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        style="@style/title_purple"
        android:background="@color/button_color"
        />

    <RadioButton
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_radio"
        style="@style/title_purple"
        />

    <CheckBox
        android:textSize="24sp"
        android:textColor="@color/teal_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_checkbox"
        style="@style/title_purple"
        />

</LinearLayout>